remove unneeded stuff